--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "sarine.viewer.dynamic.light",
+  "title": "sarine.viewer.dynamic.light",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SarineTechnologies/sarine.viewer.dynamic.light.git"
+  },
   "devDependencies": {
     "grunt-git-release": "^0.1.3",
     "grunt": "^0.4.5",
