--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "install": "^0.1.8",
     "load-grunt-tasks": "^3.1.0"
   },
-  "version": "0.2.1"
+  "version": "0.2.2",
+  "engines": {
+    "node": "4.5.0"
+  }
 }
