--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "version": "0.2.9",
   "engines": {
     "node": "4.5.0"
+  },
+   "scripts": {
+    "build": "npm install && grunt build",
+    "dev": "grunt dev"
   }
 }
